<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="line_default">xxx</string>
    <string name="title_activity_user_login">欢迎登录</string>
    <string name="title_email">账号:</string>
    <string name="email_hint">输入邮箱</string>
    <string name="title_passwd">密码:</string>
    <string name="passwd_hint">输入密码</string>
    <string name="nickname_hint">输入昵称</string>
    <string name="login_btn">登录</string>
    <string name="account_passwd_is_empty">账户名或者密码不能为空</string>
    <string name="title_activity_choose_grade_subject">选择学科,年级</string>
    <string name="choose_grade">选择年级</string>
    <string name="choose_subject">选择学科</string>
    <string name="is_new">新</string>
    <string name="enter_school_year">年入学</string>
    <string name="title_activity_welcome">欢迎进入作业帮帮圈</string>
    <string name="press_again_exit_app">再按一次退出程序</string>
    <string name="title_activity_add_circle">添加圈子</string>
    <string name="title_activity_user_center">添加圈子</string>
    <string name="cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="mygrade">我的年级</string>
    <string name="schoolandclass">学校班级</string>
    <string name="check_version">检查新版本</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_pubish_new_question">选择以下方式描述问题</string>
    <string name="describe_the_problem">描述问题</string>
    <string name="answer_question">回答问题</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="hint">试听录音</string>
    <string name="add_photo">添加图片</string>
    <string name="take_photo">拍摄</string>
    <string name="photo_description">问题照片</string>
    <string name="add_record">添加录音</string>
    <string name="photo_from">图片来源</string>
    <string name="border_dott">分割线</string>
    <string name="repeat_publish_question_info">网络不给力,正在非常,非常努力的发送！请稍候.</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="save_pic">保存</string>
    <string name="title_activity_show_image">图片查看</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="image_rotater">旋转</string>
    <string name="info_max_add">提示: 最多只能添加</string>
    <string name="records">条录音</string>
    <string name="images">张图片</string>
    <string name="add_text_desc">添加文字描述</string>
    <string name="get_image_from_photo_album">从手机相册选取</string>
    <string name="add_record_desc">录制语音描述</string>
    <string name="info_upload_image_fail">提示: 上传图片失败</string>
    <string name="default_message">请稍候...</string>
    <string name="title_activity_audio_record">录制语音描述</string>
    <string name="timer_hint">00:00</string>
    <string name="rest_time_title">录音剩余时间</string>
    <string name="has_been_recorded">已录制</string>
    <string name="sound_level_hint">0</string>
    <string name="ready_recording">按住图标开始录音,松开结束</string>
    <string name="is_recording">正在录音中</string>
    <string name="finish_recording">录音生成中…</string>
    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止录音</string>
    <string name="start_playing">开始播放</string>
    <string name="stop_playing">停止播放</string>
    <string name="info_upload_record_fail">提示: 上传录音失败</string>
    <string name="unused">unused</string>
    <string name="title_activity_downloader">DownloaderActivity</string>
    <string name="quick_answer">按问题编号回答</string>
    <string name="me_answer">我来回答</string>
    <string name="input_num">请输入问题编号</string>
    <string name="input_num_tip">        *本功能使用于在网站上找到问题编号后使用手机快速回答</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="my_tcdwt">我提出的问题</string>
    <string name="my_gzdwt">我关注的问题</string>
    <string name="my_hddwt">我回答的问题</string>
    <string name="set">学校 · 年级 · 班级设置</string>
    <string name="user_center">个人中心</string>
    <string name="system_msg">系统消息</string>
    <string name="user_logout">用户退出登录</string>
    <string name="info_user_logout_fail">提示: 系统出现错误，用户退出失败</string>
    <string name="choose_circle">选择你喜欢的圈子</string>
    <string name="del_item">确定要删除吗？</string>
    <string name="title_activity_choose_grade">ChooseGradeActivity</string>
    <string name="choose_your_grade">选择你所在的年级</string>
    <string name="confirm_title">提示: 确认需要更改年级信息?</string>
    <string name="cancel_public_question_confirm_title">确认要放弃发布问题吗?</string>
    <string name="cancel_public_answer_confirm_title">确认要放弃发布回答吗?</string>
    <string name="info_modify_grade_err">错误提示: 修改年级信息失败</string>
    <string name="title_activity_choose_cities">选择地区</string>
    <string name="title_activity_choose_schools">选择学校</string>
    <string name="title_activity_input_schools">手动输入学校名称</string>
    <string name="title_activity_input_classes">输入班级编号</string>
    <string name="input_your_school">手动输入学校名称</string>
    <string name="input_your_class">输入班级编号</string>
    <string name="title_image_submit_school">下一步</string>
    <string name="title_image_finish_school">完成</string>
    <string name="title_image_input_school">没有我的学校</string>
    <string name="choose_your_school">选择学校</string>
    <string name="input_school_default_text">输入学校名称</string>
    <string name="input_myclass_default_text">输入班级编号，仅限数字</string>
    <string name="input_myschool_result">你的学校：</string>
    <string name="info_please_login">错误提示: 请先进行登录</string>
    <string name="info_please_input_class_number">错误提示: 请输入班级编号</string>
    <string name="info_please_input_school">错误提示: 请输入你的学校名称</string>
    <string name="info_get_school_info_fail">错误提示: 获取学校信息错误</string>
    <string name="info_write_school_info_sucess">写入学校信息成功</string>
    <string name="info_write_school_info_fail">错误提示: 写入学校信息失败</string>
    <string name="info_parse_school_info_fail">错误提示: 解析学校信息失败</string>
    <string name="info_get_user_info_fail">提示: 获取用户信息失败</string>
    <string name="info_save_user_info_fail">提示: 保存用户信息失败</string>
    <string name="request_fail">请求错误</string>
    <string name="question_number_is_not_exist">编号不存在</string>
    <string name="please_enter_valid_serial_number">请输入合法的编号</string>
    <string name="all">全部</string>
    <string name="is_deleted">此问题已经被删除</string>
    <string name="answer_is_deleted">此回答已经被删除</string>
    <string name="info_id_invalid">id不合法</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="has_no_answer">还没回复</string>
    <string name="already">已有</string>
    <string name="person_answer">个人回复</string>
    <string name="answer">回答</string>
    <string name="record_download_fail">录音下载失败</string>
    <string name="play_record_info">播放语音描述</string>
    <string name="user_had_add_flower_info">很遗憾,无法为自己的回答添加正解.</string>
    <string name="user_had_add_egg_info">很遗憾,无法为自己的回答添加质疑.</string>
    <string name="sorry">很遗憾！</string>
    <string name="all_questions">全部问题</string>
    <string name="has_answered_questions">已回答</string>
    <string name="has_not_answer_questions">未回答</string>
    <string name="all_questions_param_value">all</string>
    <string name="has_answered_questions_param_value">answer</string>
    <string name="has_not_answer_questions_param_value">noanswer</string>
    <string name="commit">讨论</string>
    <string name="system_error_msg">提示：系统出现错误。</string>
    <string name="myschool">我的学校</string>
    <string name="myclass">我的班级</string>
    <string name="myqlist">我的提问</string>
    <string name="myattention">我的关注</string>
    <string name="myanswer">我的回答</string>
    <string name="create_time_title">create_time</string>
    <string name="answer_time_title">actime</string>
    <string name="attention_time_title">tctime</string>
    <string name="circle">圈</string>
    <string name="info_max_record">提示: 录音最多可以录制</string>
    <string name="second">秒</string>
    <string name="error_message">错误提示:</string>
    <string name="param_error">参数错误</string>
    <string name="user_login_timeout">用户登录超时</string>
    <string name="user_login_fail">用户登录失败</string>
    <string name="user_login_sucess">用户登录成功</string>
    <string name="info_net_fail">网络错误，请重试</string>
    <string name="data_is_being_read">正在读取数据</string>
    <string name="title_activity_user_sign_in">注册</string>
    <string name="info_system_error">提示: 系统出现错误</string>
    <string name="info_signin_sucess">提示: 注册成功</string>
    <string name="info_signin_request_fail">提示: 注册请求失败,请检查你的网络连接</string>
    <string name="info_input_param_empty">提示: 输入信息不能为空</string>
    <string name="minutes_ago">分钟前</string>
    <string name="share_friends">分享给好友</string>
    <string name="share_friends_content">作业帮帮圈, 一起搞定作业! http://zuoye.gexing.com/shouji/download</string>
    <string name="follow">关注</string>
    <string name="user_has_follow">您已经关注过该问题</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">应用程序有新版本更新</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMUpdateSize">更新包大小：</string>
    <string name="UMTargetSize">新版本大小：</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="app_name">MyProject</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎进入！！</string>
    <string name="user_name">账 号 :</string>
    <string name="pass_word">密 码 :</string>
    <string name="login">登录</string>
    <string name="regist">新用户注册</string>
    <string name="take_look">随便看看</string>
    <string name="title_activity_main">MainActivity</string>

</resources>