<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
    android:background="@drawable/login">
 
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout 
            android:id="@+id/login_main"
            android:paddingTop="130dip"
            android:paddingBottom="5dip"
            android:paddingRight="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/editText3"
                android:textSize="18sp"
                android:gravity="bottom"
                android:paddingTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:text="@string/user_name" />
            
            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editText3"
                android:layout_alignParentTop="true"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="200"
                android:inputType="text"
                android:hint="请输入账号" />
          </RelativeLayout>       
     </LinearLayout>
     <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout 
            android:id="@+id/login_main1"
            android:paddingTop="10dip"
            android:paddingBottom="5dip"
            android:paddingRight="20dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/editText4"
                android:textSize="18sp"
                android:gravity="bottom"
                android:paddingTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:text="@string/pass_word" />
            
             <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editText4"
                android:layout_alignParentTop="true"
                android:inputType="text"
                android:password="true"
                android:singleLine="true"
                android:maxLength="200"
                android:hint="请输入密码" />
        </RelativeLayout>
      </LinearLayout>
  
     <LinearLayout 
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         
         <Button
             android:id="@+id/button1"
             android:layout_width="134dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dip"
             android:text="@string/login" />
     </LinearLayout>
     
     <LinearLayout 
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         <RelativeLayout 
            android:id="@+id/login_main2"
            android:paddingBottom="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

         <Button
             android:id="@+id/button2"
             android:layout_width="134dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dip"
             android:layout_marginTop="130dip"
             android:text="@string/regist" />
         
         <Button
             android:id="@+id/button3"
             android:layout_width="134dip"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/button2"
             android:layout_alignTop="@id/button2"
             android:text="@string/take_look" />
             
         </RelativeLayout>
      </LinearLayout>
 </LinearLayout>